--- a/app/src/main/res/layout/options_fragment.xml
+++ b/app/src/main/res/layout/options_fragment.xml
@@ -18,6 +18,7 @@
         android:layout_width="fill_parent"
         android:layout_height="0.0dip"
         android:layout_weight="2.0"
+        android:visibility="gone"
         android:orientation="horizontal">
 
         <Button
