--- a/app/src/main/res/drawable/button_black.xml
+++ b/app/src/main/res/drawable/button_black.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle"
-  xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <corners android:radius="0.0dip" />
     <solid android:color="#ff252525" />
-    <stroke android:width="2.0dip" android:color="#ff403c3c" />
+    <stroke
+        android:width="2.0dip"
+        android:color="#ff403c3c" />
 </shape>
