--- a/app/src/main/res/layout/activity_new.xml
+++ b/app/src/main/res/layout/activity_new.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="0.0dip"
-        android:layout_weight="2.0"
+        android:layout_weight="3.0"
         android:background="@color/display"
         android:orientation="vertical"
         android:padding="10dp">
@@ -62,6 +62,27 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2.4"
+                android:orientation="horizontal"
+                >
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.0"
+                    android:gravity="end|center" />
+
+                <TextView
+                    android:id="@+id/tvOperation"
+                    android:layout_width="0.0dip"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="2.0"
+                    android:gravity="right|center" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="0.0dip"
                 android:layout_weight="3.0"
@@ -75,12 +96,7 @@
                     android:gravity="end|center"
                     android:text="DEC" />
 
-                <TextView
-                    android:id="@+id/tvOperation"
-                    android:layout_width="0.0dip"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="2.0"
-                    android:gravity="right|center" />
+
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
@@ -92,6 +108,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/optionButton"
             android:layout_width="40dp"
             android:layout_height="30dp"
             android:layout_gravity="center_horizontal|center_vertical"
@@ -114,7 +131,8 @@
             android:text="CT - 512"
             android:textColor="#000000"
             android:textSize="22sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginRight="20dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -130,10 +148,8 @@
             android:layout_height="match_parent"
             android:layout_margin="2.0dip"
             android:layout_weight="0.5"
-            android:adjustViewBounds="true"
-            android:background="@color/colorPrimary"
             android:scaleType="fitXY"
-            android:src="@drawable/check1" />
+            android:src="@drawable/checkbutton" />
 
         <View
             android:layout_width="0dp"
@@ -147,7 +163,8 @@
             android:layout_height="fill_parent"
             android:layout_margin="2.0dip"
             android:layout_weight="0.5"
-            android:background="@drawable/correct1" />
+            android:scaleType="fitXY"
+            android:background="@drawable/correctbutton" />
 
         <View
             android:layout_width="0dp"
@@ -155,14 +172,15 @@
 
             android:layout_weight="0.1" />
 
-        <Button
+        <ImageButton
             android:id="@+id/buttonAllClear"
             android:layout_width="0.0dip"
             android:layout_height="fill_parent"
             android:layout_marginLeft="2.0dip"
             android:layout_weight="0.3"
             android:background="@drawable/button_green"
-            android:drawableLeft="@drawable/ic_ac_on"
+            android:scaleType="fitXY"
+            android:src="@drawable/onbutton"
             android:text="" />
     </LinearLayout>
 
