--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="button_white">#ffffff</color>
+    <color name="display">#b1aeae</color>
+    <color name="display_below">#e4d4d4</color>
+    <color name="button_black">#000002</color>
 </resources>
